tests/checker/diagnostics/0199_adt_variant_branch_result_mismatch_07.ml.infer.expected
File "0199_adt_variant_branch_result_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0199_adt_variant_branch_result_mismatch_07 is not a valid module name.

File "0199_adt_variant_branch_result_mismatch_07.ml", line 4, characters 16-17:
4 |   | Closed y -> y
                    ^
Error: The value y has type bool but an expression was expected of type int
